[tool.poetry]
name = "asynchronous-task"
version = "0.1.0"
description = ""
authors = ["mist258 <natalia.kolchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.128.6"
uvicorn = "^0.40.0"
requests = "^2.32.5"
aiohttp = "^3.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
